--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -1,6 +1,7 @@
 # Dados de conexão com o banco H2
 # Dados de conex\uFFFDo com o banco H2
-spring.datasource.url=jdbc:h2:mem:timedb
+# spring.datasource.url=jdbc:h2:mem:timedb
+spring.datasource.url=jdbc:h2:file:/C:/racajovem/timebd
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -11,3 +12,7 @@ spring.h2.console.path=/h2
 # Configura\uFFFD\uFFFDo para mostrar o SQL no console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+#
