--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
