--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,7 +15,7 @@
 	<name>dstime</name>
 	<description>Projeto criado para controlar os jogos e artilharia</description>
 	<properties>
-		<java.version>11</java.version>
+		<!--<java.version>11</java.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
