--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.profiles.active=${APP_PROFILLE:test}
 
 spring.jpa.open-in-view=false
-
-spring.security.user.name=root
-spring.security.user.password=1234
+#spring.security.user.name=root
+#spring.security.user.password=1234
